hero main section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
             </div>
 
         </div>
-        
+        <br><br><br><br><br>
+        <br>
+        <div class="main">
+            <div class="text">
+                <h1>
+                    This website is awesome
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet
+                     consectetur adipisicing elit. Iusto quam ipsum, itaque, delectus vitae, aspernatur libero nobis praesentium in quas cupiditate 
+                    suscipit est! Cupiditate itaque quia aliquam totam officiis incidunt!
+                </p>
+                <br>
+                <button>Sign up </button>
+            </div>
+            <div class="image">
+
+            </div>
+        </div>
 
     </div>
 </body>
