--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <br>
     </div>
     <div class="quotes">
-        
+        <p class="quote">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi adipisci pariatur iusto quas eos voluptatem non eum ab culpa suscipit numquam rem"</p>
+        <br><br><br><br><br>
+        <p class="author"><b>-Thor,the thunder.</b></p>
     </div>
     
 </body>
