--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
         <br><br><br><br><br>
         <p class="author"><b>-Thor,the thunder.</b></p>
     </div>
+    <div class="action">
+        <div class="actiontext">
+            <div class="call">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our products by clicking the button right over there</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
     
 </body>
 </html>
