footer added , project is complete

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             <button>Sign up</button>
         </div>
     </div>
-    
+    <div class="footer">
+        <p>Copyright © Landing page project 2021</p>
+    </div>
 </body>
 </html>
